# iolinki

./: .clang-format  .docker_test_entrypoint.sh  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.test  Dockerfile.zephyr  Dockerfile.zephyr-base  Doxyfile  INSTALL.md  LICENSE  LICENSE.COMMERCIAL  MISRA_DEVIATIONS.md  README.md  SECURITY.md  check_quality.sh  cppcheck_report.txt  pyproject.toml  run_all_tests_docker.sh  test_all.sh  test_crc_manual  verify_events.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
build_bare_verify/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_bare_verify/tests/: CTestTestfile.cmake  Makefile
build_baremetal/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_baremetal/tests/: CTestTestfile.cmake  Makefile
build_linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_linux/tests/: CTestTestfile.cmake  Makefile
build_misra/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_misra/tests/: CTestTestfile.cmake  Makefile
build_quality/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_quality/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_application  test_baudrate  test_config  test_crc  test_dll  test_ds  test_error_recovery  test_events  test_init  test_integration_full  test_isdu  test_isdu_segmented  test_locking  test_m_sequence_types  test_pd  test_pd_variable  test_timing
build_release_local/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_release_local/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_release_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_release_test/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_strict/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_strict/tests/: CTestTestfile.cmake  Makefile
build_zephyr_verify/: CMakeCache.txt  Makefile  cmake_install.cmake  mock_kernel_entry.c
build_zephyr_verify/build_app/: Makefile  cmake_install.cmake
build_zephyr_verify/build_module/: Makefile  cmake_install.cmake
docs/: AGENT_INSTRUCTIONS_TEMPLATE.md  AGENT_REPORTS.md  AGENT_TASKS.md  API.md  ARCHITECTURE.md  CODING_STANDARDS.md  CONFORMANCE.md  CONTRIBUTING.md  FRAMES.md  MEMORY_GUIDE.md  PORTING.md  PUPPETEER.md  README.md  RELEASE_STRATEGY.md  ROADMAP.md  TESTING.md  VISION.md
docs/IOL-Interface-Spec_10002_V1.1.5_Oct2025/: _readme.txt
docs/agent_reports/: 2026-02-04_220957_task-11_antigravity_start.md  2026-02-04_221620_task-5_Antigravity_start.md  2026-02-04_221750_task-9_codex_start.md  2026-02-04_221953_task-11_antigravity_done.md  2026-02-04_222235_task-9_codex_done.md  2026-02-04_222403_task-5_Antigravity_done.md  2026-02-04_222443_task-5_Antigravity_done.md  2026-02-04_222629_task-7_Antigravity_start.md  2026-02-05_134246_task-17_codex_start.md  2026-02-05_134247_task-6_Frame Sync and Timing_start.md  2026-02-05_134319_task-8_Antigravity_done.md  2026-02-05_134319_task-8_Antigravity_start.md  2026-02-05_134711_task-17_codex_done.md  2026-02-05_135204_task-8_Antigravity_done.md  2026-02-05_135507_task-6_complete.md  2026-02-05_135648_task-6_Frame Sync and Timing_done.md  legacy_reports.md  task_11.md  task_4.md
docs/claims/: .gitignore  README.md
docs/html/: annotated.html  application_8h.html  application_8h__dep__incl.md5  application_8h__incl.md5  application_8h_source.html  classes.html  config_8h.html  config_8h__dep__incl.md5  config_8h_source.html  crc_8c.html  crc_8c__incl.md5  crc_8h.html  crc_8h__dep__incl.md5  crc_8h__incl.md5  crc_8h_source.html  data__storage_8c.html  data__storage_8c__incl.md5  data__storage_8h.html  data__storage_8h__dep__incl.md5  data__storage_8h__incl.md5  data__storage_8h_source.html  device__info_8c.html  device__info_8c__incl.md5  device__info_8h.html  device__info_8h__dep__incl.md5  device__info_8h__incl.md5  device__info_8h_source.html  dir_000002_000000.html  dir_650e5f580c2fc0840fa3941946e84501.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dll_8c.html  dll_8c__incl.md5  dll_8h.html  dll_8h__dep__incl.md5  dll_8h__incl.md5  dll_8h_source.html  events_8c.html  events_8c__incl.md5  events_8h.html  (+78 more)
examples/bare_metal_app/: CMakeLists.txt
examples/freertos_app/: CMakeLists.txt  FreeRTOSConfig.h  main.c
examples/host_demo/: CMakeLists.txt
examples/simple_device/: CMakeLists.txt  simple_device.json  simple_device.xml
examples/zephyr_app/: CMakeLists.txt  prj.conf
include/iolinki/: application.h  config.h  crc.h  data_storage.h  device_info.h  dll.h  events.h  iolink.h  isdu.h  params.h  phy.h  phy_generic.h  phy_virtual.h  platform.h  protocol.h  time_utils.h  time_utils.h.bak  utils.h
src/: crc.c  data_storage.c  device_info.c  dll.c  dll_internal.h  events.c  iolink_core.c  isdu.c  params.c  phy_generic.c  phy_virtual.c  platform.c  platform_stubs.c
tests/: CMakeLists.txt  test_app_pd.c  test_application.c  test_baudrate.c  test_config_verification.c  test_crc.c  test_crc_manual.c  test_dll.c  test_ds.c  test_error_recovery.c  test_events.c  test_helpers.c  test_helpers.h  test_init.c  test_integration_full.c  test_isdu.c  test_isdu_flow_control.c  test_isdu_segmented.c  test_isdu_stress.c  test_locking.c  test_m_sequence_types.c  test_pd.c  test_pd_variable.c  test_phy_diagnostics.c  test_sio_fallback.c  test_timing.c  test_zephyr.sh
tests/docker/: Dockerfile
tests/zephyr_mock/: CMakeLists.txt  ZephyrConfig.cmake
tools/: IODD_GEN.md  add_copyright_headers.sh  build_zephyr_docker.sh  claim_task.sh  complete_task.sh  fix_imports.py  generate_release_notes.py  generate_reports_index.sh  iodd_gen.py  run-cppcheck.sh  run_tests_docker.sh  task_status.sh  validate_tasks.sh  zephyr_wrapper.sh
tools/virtual_master/: README.md  SERVICES.md  (+25 more)
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+111 files in other folders)
