find_package(PkgConfig QUIET)
if(PkgConfig_FOUND)
    pkg_check_modules(CMOCKA QUIET cmocka)
endif()

# Fallback for systems without pkg-config or where it fails
if(NOT CMOCKA_FOUND)
    find_path(CMOCKA_INCLUDE_DIRS cmocka.h)
    find_library(CMOCKA_LIBRARIES cmocka)
    if(CMOCKA_INCLUDE_DIRS AND CMOCKA_LIBRARIES)
        set(CMOCKA_FOUND TRUE)
    endif()
endif()

if(CMOCKA_FOUND)
    message(STATUS "CMocka found: ${CMOCKA_LIBRARIES}")
    include_directories(${CMOCKA_INCLUDE_DIRS})

    macro(add_iolink_test name source)
        add_executable(${name} ${source} test_helpers.c)
        target_link_libraries(${name} iolinki ${CMOCKA_LIBRARIES})
        add_test(NAME ${name} COMMAND ${name})
    endmacro()

    # Initial tests
    add_iolink_test(test_init test_init.c)
    add_iolink_test(test_crc test_crc.c)
    add_iolink_test(test_dll test_dll.c)
    add_iolink_test(test_pd test_pd.c)
    add_iolink_test(test_isdu test_isdu.c)
    add_iolink_test(test_isdu_segmented test_isdu_segmented.c)
    add_iolink_test(test_events test_events.c)
    add_iolink_test(test_ds test_ds.c)
    add_iolink_test(test_error_recovery test_error_recovery.c)
    add_iolink_test(test_timing test_timing.c)
    add_iolink_test(test_integration_full test_integration_full.c)
    add_iolink_test(test_application test_application.c)
    add_iolink_test(test_m_sequence_types test_m_sequence_types.c)
    
    # Portability Verification
    add_iolink_test(test_locking test_locking.c)
    add_iolink_test(test_config test_config_verification.c)
    add_iolink_test(test_pd_variable test_pd_variable.c)
    add_iolink_test(test_baudrate test_baudrate.c)
    add_iolink_test(test_phy_diagnostics test_phy_diagnostics.c)
    add_iolink_test(test_app_pd test_app_pd.c)
    add_iolink_test(test_sio_fallback test_sio_fallback.c)
    add_iolink_test(test_isdu_stress test_isdu_stress.c)
else()
    message(WARNING "CMocka not found, unit tests will be skipped. Install libcmocka-dev to enable them.")
endif()
